--- a/composer.json
+++ b/composer.json
@@ -55,6 +55,7 @@
     "config": {
         "optimize-autoloader": true,
         "preferred-install": "dist",
+        "platform-check": false,
         "sort-packages": true
     },
     "minimum-stability": "dev",
