--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "dapphp/torutils": "^1.15",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
+        "graham-campbell/digitalocean": "^8.2",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.40",
         "laravel/tinker": "^2.5",
