--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,7 @@
         "laravel/socialite": "^5.0",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.0",
+        "nunomaduro/laravel-console-dusk": "^1.9",
         "phpseclib/phpseclib": "^3.0",
         "pusher/pusher-php-server": "^4.1",
         "rap2hpoutre/laravel-log-viewer": "^1.4",
@@ -50,6 +51,7 @@
         "barryvdh/laravel-debugbar": "^3.2",
         "facade/ignition": "^2.3.6",
         "fzaninotto/faker": "^1.9.1",
+        "laravel/dusk": "^6.18",
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^5.0",
         "phpunit/phpunit": "^9.3"
